package io.github.super_auto_pets.controller

enum class BuildPhase {
    PLAYER_A,
    PLAYER_B,
    BATTLE
}
