package io.github.super_auto_pets.controller

enum class GameMode {
    SINGLEPLAYER,
    LOCAL_MULTIPLAYER
}
