@startuml
interface io.github.super_auto_pets.interfaces.GameUnit {
+ Boolean isFrozen
+ String name
+ Int cost
+ String path
+ void toggleFreeze()
}


class io.github.super_auto_pets.models.Empty {
+ String name
+ Int cost
+ Boolean isFrozen
+ String path
}

class io.github.super_auto_pets.models.Sprite {
+ String name
+ Int attack
+ Int health
+ Int tier
+ Item? item
+ Int level
+ Int cost
+ Boolean isFrozen
+ String color
+ String path
+ String toString()
}


class io.github.super_auto_pets.controller.BattleController {
+ AttackEvent? nextAttackStep()
- void removeDead(MutableList<GameUnit>)
+ void attack(Sprite,Sprite)
}

class io.github.super_auto_pets.controller.PlayerController {
+ void startTurn()
+ Int toggleFreeze(Int)
+ Int reroll()
+ Int buy(Int,Int)
+ Int sell(Int)
+ Int move(Int,Int)
+ Int combine(Int,Int)
+ Boolean canAffordUnit(GameUnit)
+ Boolean canAffordReroll()
+ void endTurn()
+ Int getPlayerGold()
+ Int getUnitCost(GameUnit)
}

class io.github.super_auto_pets.models.Battle {
-  _playerA
+ Player playerA
-  _playerB
+ Player playerB
}

class io.github.super_auto_pets.main.Main {
}
class io.github.super_auto_pets.main.null {
+ void updateHighscore(String,Int)
}

enum io.github.super_auto_pets.controller.BuildPhase {
+  PLAYER_A
+  PLAYER_B
+  BATTLE
}

interface io.github.super_auto_pets.interfaces.ISprite {
+ String name
+ Int attack
+ Int health
+ Int tier
+ Item? item
+ Int level
+ Int cost
+ Boolean isFrozen
+ String color
+ String path
}

class io.github.super_auto_pets.managers.PlayerManager {
+ String playerAName
+ String playerBName
+ void resetPlayers()
}


class io.github.super_auto_pets.factories.SpriteFactory$Companion {
+ Sprite createCopy(Sprite)
+ Sprite createSprite(String,Int,Int,Int,Int,Int,Boolean,String,String,Item?)
}

class io.github.super_auto_pets.factories.SpriteFactory {
}
class io.github.super_auto_pets.factories.ItemFactory$Companion {
+ Item createCopy(Item)
+ Item createItem(String,Int,Int,Int,Boolean,String)
}

class io.github.super_auto_pets.factories.ItemFactory {
}
class io.github.super_auto_pets.controller.ShopController {
- void parseGameUnits()
+ Int toggleFreeze(Int)
+ Int reroll()
+ Int buy(Int,Int)
- Int buySpriteResponse(GameUnit,Int)
- Int buyToEmptyResponse(GameUnit,Int)
- Int buyToOccupiedSlotResponse()
- Int buyToSameResponse(GameUnit,Int)
- Int buyItemResponse(GameUnit,Int)
- Int buyTargetedItem(GameUnit,Int)
- void generateEmptyTeamSlots()
- void generateInitialShop()
- GameUnit generateShopSlot(Int)
- Sprite generateRandomSprite()
- Item generateRandomItem()
+ void endTurn()
}

interface io.github.super_auto_pets.interfaces.HighscoreService {
+ void updateHighscore(String,Int)
}

class io.github.super_auto_pets.utilities.JsonParser {
+ List<Sprite> parseSprites()
+ List<Item> parseItems()
}

class io.github.super_auto_pets.controller.AttackEvent {
}
class io.github.super_auto_pets.models.Shop {
+ MutableList<GameUnit> slots
+ MutableSet<Int> frozenUnits
}

class io.github.super_auto_pets.models.Item {
+ String name
+ Int cost
+ Boolean isFrozen
+ Int addHealth
+ Int addAttack
+ String path
+ String toString()
}


class io.github.super_auto_pets.models.Player {
+ String name
+ Int gold
+ Int turn
+ Int winStreak
+ Team team
+ Shop shop
+ ShopController shopController
}

class io.github.super_auto_pets.models.Team {
- MutableList<GameUnit> _teams
+ MutableList<GameUnit> teams
}

enum io.github.super_auto_pets.controller.GameMode {
+  SINGLEPLAYER
+  LOCAL_MULTIPLAYER
}



io.github.super_auto_pets.interfaces.GameUnit <|.. io.github.super_auto_pets.models.Empty
io.github.super_auto_pets.interfaces.ISprite <|.. io.github.super_auto_pets.models.Sprite
com.badlogic.gdx.ApplicationAdapter <|-- io.github.super_auto_pets.main.Main
io.github.super_auto_pets.main.HighscoreService <|.. io.github.super_auto_pets.main.null
io.github.super_auto_pets.interfaces.GameUnit <|.. io.github.super_auto_pets.interfaces.ISprite
io.github.super_auto_pets.factories.SpriteFactory +.. io.github.super_auto_pets.factories.SpriteFactory$Companion
io.github.super_auto_pets.factories.ItemFactory +.. io.github.super_auto_pets.factories.ItemFactory$Companion
io.github.super_auto_pets.interfaces.GameUnit <|.. io.github.super_auto_pets.models.Item
@enduml
